--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -8,7 +8,7 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/pmsdb-test?useSSL=false&serv
 #DB username
 spring.datasource.username=root
 #DB password
-spring.datasource.password=arr0wh3ad
+spring.datasource.password=root
 #DB driver
 spring.datasource.driverClassName=com.mariadb.jdbc.Driver
 #Tells to keep existing data and table while server restarts, other value is create where after server restart all tables recreated
